New Jekyll setup

--- a/404.html
+++ b/404.html
@@ -1,44 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>404</title>
-    <style type="text/css">
-    body{
-      margin:0;
-      padding:0;
-      font-family:sans-serif
-    }
-    .NoMatch{
-      text-align:center;
-      color:#42a4f4;
-      font-weight:100%
-    }
-    .error404{
-      font-size:200px
-    }
-    .PNF{
-      font-size:36px;
-      padding-bottom:30px
-    }
-    .NoMatch a{
-      text-decoration:none;
-      color:inherit;
-      padding:10px;
-      border:1px solid
-    }
-    .NoMatch a:hover{
-      background-color:#42a4f4;
-      color:#fff
-    }
-    </style>
-  </head>
-  <body>
-    <div class="NoMatch">
-      <div class="error404">404</div>
-      <div class="PNF">PAGE NOT FOUND</div>
-      <a href="/">Home</a>
-    </div>
-  </body>
-</html>
+---
+permalink: /404.html
+layout: default
+---
+
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
+</div>
