--- a/404.html
+++ b/404.html
@@ -9,6 +9,9 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+  .container h1 {
+    color:#FF664C;
+  }
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -20,6 +23,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h5><strong>Page not found :(</strong></h5>
+  <h5>The requested page could not be found.</h5>
 </div>
